<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plan_plotter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="swedeenjames@gmail.com">james</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>graph_surveillance_planning_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
